...
            return "Less Than $5"
        case .fiveToTen:
            return "Between $5 and $10"
        case .overTen:
            return "More Than $10"
        case .overTwenty:
            return "More Than $20"
        }
    }

    var symbolName: String {
        switch self {
        case .none:
...
